--- a/index.html
+++ b/index.html
@@ -107,35 +107,29 @@
   </style>
 </head>
 <body>
-  <audio id="bg-music" autoplay loop>
+  <audio id="bg-music">
     <source src="https://www2.cs.uic.edu/~i101/SoundFiles/HappyBirthdaySong.mp3" type="audio/mp3">
   </audio>
 
   <header>🎂 Happy Birthday, Momina! 🎉</header>
   <div class="options">
-    <button onclick="showSection('wish')">💌 Read Your Wish</button>
-    <button onclick="showSection('writewish')">✍️ Write Your Own Wish</button>
+    <button onclick="showSection('wish'); playMusic()">💌 Read Your Wish</button>
     <button onclick="showSection('game1')">🎯 Score Game</button>
     <button onclick="showSection('game2')">🧠 Romantic Questions</button>
     <button onclick="showSection('gift')">🎁 Surprise Gift</button>
+    <button onclick="toggleFireworks()">🎆 Fireworks</button>
   </div>
 
   <div class="content" id="wish">
     <p class="typing"></p>
   </div>
 
-  <div class="content" id="writewish">
-    <h2>✍️ Write your own wish for me!</h2>
-    <form action="https://formsubmit.co/YOUR_EMAIL_HERE" method="POST">
-      <textarea name="wish" placeholder="Type your heartfelt message here..."></textarea>
-      <input type="submit" value="Send Wish 💌">
-    </form>
-  </div>
-
   <div class="content" id="game1">
-    <h2>🎯 Score Game</h2>
-    <button onclick="increaseScore()">💘 Tap to Score</button>
+    <h2>💕 Love Challenge Game</h2>
+    <p>Click the heart as many times as you can in 10 seconds!</p>
+    <button id="loveBtn" onclick="increaseScore()">💖</button>
     <p>Your Score: <span id="score">0</span></p>
+    <p id="timer"></p>
   </div>
 
   <div class="content" id="game2">
@@ -157,8 +151,9 @@
   </div>
 
   <script>
-    const fullMessage = "Tum meri zindagi, mera sukoon, mera sab kuch ho. I can't wait to get married to you. Meri intahaayat, meri duniya, mera pyaara sa bacha. I love you so muchhhhhhhhhhhhhhhhh 💕.seriously i cant wait to get married to you mera bachaaaa.happy birthday meri jaaan ALLAH tmhain hazar khushiyan dy my you live a long and a happy life meri jaaan";
+    const fullMessage = "Tum meri zindagi, mera sukoon, mera sab kuch ho. I can't wait to get married to you. Meri intahaayat, meri duniya, mera pyaara sa bacha. I love you so muchhhhhhhhhhhhhhhhh 💕. seriously i cant wait to get married to you mera bachaaaa. Happy birthday meri jaaan. ALLAH tmhain hazar khushiyan dy, may you live a long and a happy life meri jaaan. I wasn't near you so I thought of this little nice gift for you now 💌";
     const typingElem = document.querySelector(".typing");
+    const music = document.getElementById("bg-music");
     let index = 0;
     function typeWish() {
       if (index < fullMessage.length) {
@@ -174,17 +169,46 @@
       if (id === 'wish') typeWish();
     }
 
+    function playMusic() {
+      music.play();
+    }
+
     let score = 0;
+    let gameActive = false;
     function increaseScore() {
-      score++;
-      document.getElementById('score').textContent = score;
+      if (!gameActive) {
+        gameActive = true;
+        score = 0;
+        document.getElementById('score').textContent = score;
+        let timeLeft = 10;
+        document.getElementById('timer').textContent = `⏳ ${timeLeft}s`;
+        const countdown = setInterval(() => {
+          timeLeft--;
+          document.getElementById('timer').textContent = `⏳ ${timeLeft}s`;
+          if (timeLeft <= 0) {
+            clearInterval(countdown);
+            gameActive = false;
+            document.getElementById('timer').textContent = `⏱️ Time's up!`;
+          }
+        }, 1000);
+      }
+      if (gameActive) {
+        score++;
+        document.getElementById('score').textContent = score;
+      }
     }
 
     function revealGift() {
       document.getElementById('gift-text').innerText = "🌟 Surprise! Your gift is my forever love, my loyalty, and my heart. 🎁❤️";
     }
 
+    let fireworksOn = false;
+    function toggleFireworks() {
+      fireworksOn = !fireworksOn;
+    }
+
     document.addEventListener('click', function(e) {
+      if (!fireworksOn) return;
       const fw = document.createElement('div');
       fw.className = 'firework';
       fw.style.left = `${e.pageX}px`;
@@ -193,7 +217,6 @@
       setTimeout(() => fw.remove(), 1000);
     });
 
-    // Rose Petal animation
     setInterval(() => {
       const rose = document.createElement('div');
       rose.className = 'rose';
