--- a/index.html
+++ b/index.html
@@ -60,32 +60,29 @@
     }
     .rose {
       position: fixed;
-      width: 30px;
-      height: 30px;
-      background: url('https://i.imgur.com/LpF9Yzr.png') no-repeat center center / contain;
+      width: 60px;
+      height: 60px;
+      background: url('https://i.imgur.com/yb6nQhY.png') no-repeat center center / contain;
       animation: fall 10s linear infinite;
-      top: -50px;
+      top: -60px;
       pointer-events: none;
+      z-index: 0;
     }
     @keyframes fall {
-      0% { transform: translateY(0); opacity: 1; }
-      100% { transform: translateY(100vh); opacity: 0; }
+      0% { transform: translateY(0) rotate(0deg); opacity: 1; }
+      100% { transform: translateY(100vh) rotate(360deg); opacity: 0; }
     }
     .gift-box {
       font-size: 3rem;
       cursor: pointer;
       margin-top: 2rem;
     }
-    .firework {
-      position: absolute;
-      border-radius: 50%;
-      width: 10px;
-      height: 10px;
-      background: pink;
-      animation: explode 1s ease-out forwards;
-    }
-    @keyframes explode {
-      to { transform: scale(10); opacity: 0; }
+    canvas {
+      position: fixed;
+      top: 0;
+      left: 0;
+      pointer-events: none;
+      z-index: 10;
     }
     form textarea {
       width: 80%;
@@ -113,11 +110,11 @@
 
   <header>🎂 Happy Birthday, Momina! 🎉</header>
   <div class="options">
-    <button onclick="showSection('wish'); playMusic()">💌 Read Your Wish</button>
+    <button onclick="showSection('wish')">💌 Read Your Wish</button>
     <button onclick="showSection('game1')">🎯 Score Game</button>
     <button onclick="showSection('game2')">🧠 Romantic Questions</button>
     <button onclick="showSection('gift')">🎁 Surprise Gift</button>
-    <button onclick="toggleFireworks()">🎆 Fireworks</button>
+    <button onclick="startFireworks()">🎆 Fireworks</button>
   </div>
 
   <div class="content" id="wish">
@@ -125,11 +122,9 @@
   </div>
 
   <div class="content" id="game1">
-    <h2>💕 Love Challenge Game</h2>
-    <p>Click the heart as many times as you can in 10 seconds!</p>
-    <button id="loveBtn" onclick="increaseScore()">💖</button>
+    <h2>🎯 Score Game</h2>
+    <button onclick="increaseScore()">💘 Tap to Score</button>
     <p>Your Score: <span id="score">0</span></p>
-    <p id="timer"></p>
   </div>
 
   <div class="content" id="game2">
@@ -150,12 +145,14 @@
     <p id="gift-text"></p>
   </div>
 
+  <canvas id="fireworks"></canvas>
+
   <script>
-    const fullMessage = "Tum meri zindagi, mera sukoon, mera sab kuch ho. I can't wait to get married to you. Meri intahaayat, meri duniya, mera pyaara sa bacha. I love you so muchhhhhhhhhhhhhhhhh 💕. seriously i cant wait to get married to you mera bachaaaa. Happy birthday meri jaaan. ALLAH tmhain hazar khushiyan dy, may you live a long and a happy life meri jaaan. I wasn't near you so I thought of this little nice gift for you now 💌";
+    const fullMessage = "Tum meri zindagi, mera sukoon, mera sab kuch ho. I can't wait to get married to you. Meri intahaayat, meri duniya, mera pyaara sa bacha. I love you so muchhhhhhhhhhhhhhhhh 💕. Seriously I can't wait to get married to you mera bachaaaa. Happy birthday meri jaaan. ALLAH tmhain hazar khushiyan dy. May you live a long and a happy life meri jaaan.";
     const typingElem = document.querySelector(".typing");
-    const music = document.getElementById("bg-music");
     let index = 0;
     function typeWish() {
+      document.getElementById('bg-music').play();
       if (index < fullMessage.length) {
         typingElem.innerHTML += fullMessage.charAt(index);
         index++;
@@ -169,61 +166,71 @@
       if (id === 'wish') typeWish();
     }
 
-    function playMusic() {
-      music.play();
-    }
-
     let score = 0;
-    let gameActive = false;
     function increaseScore() {
-      if (!gameActive) {
-        gameActive = true;
-        score = 0;
-        document.getElementById('score').textContent = score;
-        let timeLeft = 10;
-        document.getElementById('timer').textContent = `⏳ ${timeLeft}s`;
-        const countdown = setInterval(() => {
-          timeLeft--;
-          document.getElementById('timer').textContent = `⏳ ${timeLeft}s`;
-          if (timeLeft <= 0) {
-            clearInterval(countdown);
-            gameActive = false;
-            document.getElementById('timer').textContent = `⏱️ Time's up!`;
-          }
-        }, 1000);
-      }
-      if (gameActive) {
-        score++;
-        document.getElementById('score').textContent = score;
-      }
+      score++;
+      document.getElementById('score').textContent = score;
     }
 
     function revealGift() {
       document.getElementById('gift-text').innerText = "🌟 Surprise! Your gift is my forever love, my loyalty, and my heart. 🎁❤️";
     }
 
-    let fireworksOn = false;
-    function toggleFireworks() {
-      fireworksOn = !fireworksOn;
-    }
-
-    document.addEventListener('click', function(e) {
-      if (!fireworksOn) return;
-      const fw = document.createElement('div');
-      fw.className = 'firework';
-      fw.style.left = `${e.pageX}px`;
-      fw.style.top = `${e.pageY}px`;
-      document.body.appendChild(fw);
-      setTimeout(() => fw.remove(), 1000);
-    });
-
+    // Rose Petal Animation
     setInterval(() => {
       const rose = document.createElement('div');
       rose.className = 'rose';
       rose.style.left = Math.random() * window.innerWidth + 'px';
       document.body.appendChild(rose);
       setTimeout(() => rose.remove(), 10000);
-    }, 500);
+    }, 800);
+
+    // Realistic Fireworks
+    const canvas = document.getElementById('fireworks');
+    const ctx = canvas.getContext('2d');
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+
+    let fireworksActive = false;
+
+    function startFireworks() {
+      fireworksActive = true;
+    }
+
+    document.addEventListener('click', function(e) {
+      if (!fireworksActive) return;
+      const x = e.pageX;
+      const y = e.pageY;
+      for (let i = 0; i < 50; i++) {
+        let angle = Math.random() * 2 * Math.PI;
+        let radius = Math.random() * 5 + 2;
+        let speed = Math.random() * 5 + 2;
+        let dx = Math.cos(angle) * speed;
+        let dy = Math.sin(angle) * speed;
+        let color = `hsl(${Math.random() * 360}, 100%, 70%)`;
+        particles.push({ x, y, dx, dy, radius, color, alpha: 1 });
+      }
+    });
+
+    let particles = [];
+
+    function animate() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      particles.forEach((p, index) => {
+        ctx.beginPath();
+        ctx.globalAlpha = p.alpha;
+        ctx.fillStyle = p.color;
+        ctx.arc(p.x, p.y, p.radius, 0, 2 * Math.PI);
+        ctx.fill();
+        p.x += p.dx;
+        p.y += p.dy;
+        p.alpha -= 0.02;
+        if (p.alpha <= 0) particles.splice(index, 1);
+      });
+      ctx.globalAlpha = 1;
+      requestAnimationFrame(animate);
+    }
+    animate();
   </script>
 </body>
 </html>
