--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Happy Birthday Momina 🎂</title>
-  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet" />
   <style>
+    /* (Same CSS as before) */
+    /* ... unchanged styles ... */
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
@@ -109,11 +111,13 @@
   </audio>
 
   <header>🎂 Happy Birthday, Momina! 🎉</header>
+
   <div class="options">
     <button onclick="showSection('wish')">💌 Read Your Wish</button>
     <button onclick="showSection('game1')">🎯 Score Game</button>
     <button onclick="showSection('game2')">🧠 Romantic Questions</button>
     <button onclick="showSection('gift')">🎁 Surprise Gift</button>
+    <button onclick="showSection('game3')">🧸 Guess the Memory</button>
     <button onclick="startFireworks()">🎆 Fireworks</button>
   </div>
 
@@ -145,14 +149,22 @@
     <p id="gift-text"></p>
   </div>
 
+  <!-- New Romantic Game Section -->
+  <div class="content" id="game3">
+    <h2>🧸 Guess the Memory</h2>
+    <div id="memory-question"></div>
+    <div id="memory-options"></div>
+    <p id="memory-result"></p>
+  </div>
+
   <canvas id="fireworks"></canvas>
 
   <script>
     const fullMessage = "Tum meri zindagi, mera sukoon, mera sab kuch ho. I can't wait to get married to you. Meri intahaayat, meri duniya, mera pyaara sa bacha. I love you so muchhhhhhhhhhhhhhhhh 💕. Seriously I can't wait to get married to you mera bachaaaa. Happy birthday meri jaaan. ALLAH tmhain hazar khushiyan dy. May you live a long and a happy life meri jaaan.";
     const typingElem = document.querySelector(".typing");
     let index = 0;
+
     function typeWish() {
-      document.getElementById('bg-music').play();
       if (index < fullMessage.length) {
         typingElem.innerHTML += fullMessage.charAt(index);
         index++;
@@ -163,7 +175,13 @@
     function showSection(id) {
       document.querySelectorAll('.content').forEach(div => div.classList.remove('visible'));
       document.getElementById(id).classList.add('visible');
-      if (id === 'wish') typeWish();
+      if (id === 'wish') {
+        index = 0;
+        typingElem.innerHTML = '';
+        document.getElementById('bg-music').play();
+        typeWish();
+      }
+      if (id === 'game3') loadMemoryGame();
     }
 
     let score = 0;
@@ -185,7 +203,7 @@
       setTimeout(() => rose.remove(), 10000);
     }, 800);
 
-    // Realistic Fireworks
+    // Fireworks Animation
     const canvas = document.getElementById('fireworks');
     const ctx = canvas.getContext('2d');
     canvas.width = window.innerWidth;
@@ -231,6 +249,59 @@
       requestAnimationFrame(animate);
     }
     animate();
+
+    // 💖 Romantic Memory Game Logic
+    const memoryQuestions = [
+      {
+        question: "Which place did we first talk about forever love?",
+        options: ["The library", "Instagram chat", "That cute night call"],
+        answer: "That cute night call"
+      },
+      {
+        question: "Which word do I always say to make you blush?",
+        options: ["Sundari", "Meri jaan", "Meri pyaari chipkali"],
+        answer: "Meri jaan"
+      },
+      {
+        question: "What did I say when I first called you mine?",
+        options: ["You're mine now", "You’re stuck with me forever ❤️", "I love you"],
+        answer: "You’re stuck with me forever ❤️"
+      }
+    ];
+
+    let currentMemory = 0;
+
+    function loadMemoryGame() {
+      const q = memoryQuestions[currentMemory];
+      document.getElementById('memory-question').textContent = q.question;
+
+      const optionsDiv = document.getElementById('memory-options');
+      optionsDiv.innerHTML = '';
+      q.options.forEach(option => {
+        const btn = document.createElement('button');
+        btn.textContent = option;
+        btn.style.margin = '10px';
+        btn.style.padding = '10px 20px';
+        btn.style.borderRadius = '20px';
+        btn.style.border = 'none';
+        btn.style.backgroundColor = '#fff';
+        btn.style.color = '#ff1493';
+        btn.style.cursor = 'pointer';
+        btn.onclick = () => {
+          if (option === q.answer) {
+            document.getElementById('memory-result').textContent = "Aww yes! 🥺 You really know us 💖";
+          } else {
+            document.getElementById('memory-result').textContent = "Oops! 😅 But I still love you!";
+          }
+          currentMemory = (currentMemory + 1) % memoryQuestions.length;
+          setTimeout(() => {
+            document.getElementById('memory-result').textContent = "";
+            loadMemoryGame();
+          }, 2000);
+        };
+        optionsDiv.appendChild(btn);
+      });
+    }
   </script>
 </body>
 </html>
