--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
   <title>Happy Birthday Momina 🎂</title>
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet" />
   <style>
-    /* (Same CSS as before) */
-    /* ... unchanged styles ... */
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
@@ -117,7 +115,6 @@
     <button onclick="showSection('game1')">🎯 Score Game</button>
     <button onclick="showSection('game2')">🧠 Romantic Questions</button>
     <button onclick="showSection('gift')">🎁 Surprise Gift</button>
-    <button onclick="showSection('game3')">🧸 Guess the Memory</button>
     <button onclick="startFireworks()">🎆 Fireworks</button>
   </div>
 
@@ -149,20 +146,13 @@
     <p id="gift-text"></p>
   </div>
 
-  <!-- New Romantic Game Section -->
-  <div class="content" id="game3">
-    <h2>🧸 Guess the Memory</h2>
-    <div id="memory-question"></div>
-    <div id="memory-options"></div>
-    <p id="memory-result"></p>
-  </div>
-
   <canvas id="fireworks"></canvas>
 
   <script>
     const fullMessage = "Tum meri zindagi, mera sukoon, mera sab kuch ho. I can't wait to get married to you. Meri intahaayat, meri duniya, mera pyaara sa bacha. I love you so muchhhhhhhhhhhhhhhhh 💕. Seriously I can't wait to get married to you mera bachaaaa. Happy birthday meri jaaan. ALLAH tmhain hazar khushiyan dy. May you live a long and a happy life meri jaaan.";
     const typingElem = document.querySelector(".typing");
     let index = 0;
+    const bgMusic = document.getElementById('bg-music');
 
     function typeWish() {
       if (index < fullMessage.length) {
@@ -176,12 +166,9 @@
       document.querySelectorAll('.content').forEach(div => div.classList.remove('visible'));
       document.getElementById(id).classList.add('visible');
       if (id === 'wish') {
-        index = 0;
-        typingElem.innerHTML = '';
-        document.getElementById('bg-music').play();
+        if (bgMusic.paused) bgMusic.play();
         typeWish();
       }
-      if (id === 'game3') loadMemoryGame();
     }
 
     let score = 0;
@@ -194,7 +181,6 @@
       document.getElementById('gift-text').innerText = "🌟 Surprise! Your gift is my forever love, my loyalty, and my heart. 🎁❤️";
     }
 
-    // Rose Petal Animation
     setInterval(() => {
       const rose = document.createElement('div');
       rose.className = 'rose';
@@ -203,105 +189,108 @@
       setTimeout(() => rose.remove(), 10000);
     }, 800);
 
-    // Fireworks Animation
+    // Realistic Fireworks
     const canvas = document.getElementById('fireworks');
     const ctx = canvas.getContext('2d');
     canvas.width = window.innerWidth;
     canvas.height = window.innerHeight;
 
+    let fireworks = [];
+    let particles = [];
+
+    function random(min, max) {
+      return Math.random() * (max - min) + min;
+    }
+
+    class Firework {
+      constructor() {
+        this.x = random(canvas.width * 0.2, canvas.width * 0.8);
+        this.y = canvas.height;
+        this.targetY = random(canvas.height * 0.2, canvas.height * 0.5);
+        this.speed = 5;
+        this.exploded = false;
+        this.color = `hsl(${Math.random() * 360}, 100%, 60%)`;
+      }
+
+      update() {
+        this.y -= this.speed;
+        if (this.y <= this.targetY && !this.exploded) {
+          this.exploded = true;
+          for (let i = 0; i < 100; i++) {
+            particles.push(new Particle(this.x, this.y, this.color));
+          }
+        }
+      }
+
+      draw() {
+        if (!this.exploded) {
+          ctx.beginPath();
+          ctx.fillStyle = this.color;
+          ctx.arc(this.x, this.y, 3, 0, 2 * Math.PI);
+          ctx.fill();
+        }
+      }
+    }
+
+    class Particle {
+      constructor(x, y, color) {
+        this.x = x;
+        this.y = y;
+        this.radius = Math.random() * 2 + 1;
+        this.color = color;
+        this.angle = Math.random() * 2 * Math.PI;
+        this.speed = Math.random() * 5 + 2;
+        this.gravity = 0.05;
+        this.alpha = 1;
+      }
+
+      update() {
+        this.x += Math.cos(this.angle) * this.speed;
+        this.y += Math.sin(this.angle) * this.speed + this.gravity;
+        this.alpha -= 0.015;
+      }
+
+      draw() {
+        ctx.globalAlpha = this.alpha;
+        ctx.beginPath();
+        ctx.fillStyle = this.color;
+        ctx.arc(this.x, this.y, this.radius, 0, 2 * Math.PI);
+        ctx.fill();
+        ctx.globalAlpha = 1;
+      }
+    }
+
     let fireworksActive = false;
 
     function startFireworks() {
       fireworksActive = true;
+      setInterval(() => {
+        if (fireworksActive) {
+          fireworks.push(new Firework());
+        }
+      }, 800);
     }
-
-    document.addEventListener('click', function(e) {
-      if (!fireworksActive) return;
-      const x = e.pageX;
-      const y = e.pageY;
-      for (let i = 0; i < 50; i++) {
-        let angle = Math.random() * 2 * Math.PI;
-        let radius = Math.random() * 5 + 2;
-        let speed = Math.random() * 5 + 2;
-        let dx = Math.cos(angle) * speed;
-        let dy = Math.sin(angle) * speed;
-        let color = `hsl(${Math.random() * 360}, 100%, 70%)`;
-        particles.push({ x, y, dx, dy, radius, color, alpha: 1 });
-      }
-    });
-
-    let particles = [];
 
     function animate() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      ctx.fillStyle = 'rgba(0, 0, 0, 0.2)';
+      ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+      fireworks.forEach((fw, index) => {
+        fw.update();
+        fw.draw();
+        if (fw.exploded) fireworks.splice(index, 1);
+      });
+
       particles.forEach((p, index) => {
-        ctx.beginPath();
-        ctx.globalAlpha = p.alpha;
-        ctx.fillStyle = p.color;
-        ctx.arc(p.x, p.y, p.radius, 0, 2 * Math.PI);
-        ctx.fill();
-        p.x += p.dx;
-        p.y += p.dy;
-        p.alpha -= 0.02;
+        p.update();
+        p.draw();
         if (p.alpha <= 0) particles.splice(index, 1);
       });
-      ctx.globalAlpha = 1;
+
       requestAnimationFrame(animate);
     }
+
     animate();
-
-    // 💖 Romantic Memory Game Logic
-    const memoryQuestions = [
-      {
-        question: "Which place did we first talk about forever love?",
-        options: ["The library", "Instagram chat", "That cute night call"],
-        answer: "That cute night call"
-      },
-      {
-        question: "Which word do I always say to make you blush?",
-        options: ["Sundari", "Meri jaan", "Meri pyaari chipkali"],
-        answer: "Meri jaan"
-      },
-      {
-        question: "What did I say when I first called you mine?",
-        options: ["You're mine now", "You’re stuck with me forever ❤️", "I love you"],
-        answer: "You’re stuck with me forever ❤️"
-      }
-    ];
-
-    let currentMemory = 0;
-
-    function loadMemoryGame() {
-      const q = memoryQuestions[currentMemory];
-      document.getElementById('memory-question').textContent = q.question;
-
-      const optionsDiv = document.getElementById('memory-options');
-      optionsDiv.innerHTML = '';
-      q.options.forEach(option => {
-        const btn = document.createElement('button');
-        btn.textContent = option;
-        btn.style.margin = '10px';
-        btn.style.padding = '10px 20px';
-        btn.style.borderRadius = '20px';
-        btn.style.border = 'none';
-        btn.style.backgroundColor = '#fff';
-        btn.style.color = '#ff1493';
-        btn.style.cursor = 'pointer';
-        btn.onclick = () => {
-          if (option === q.answer) {
-            document.getElementById('memory-result').textContent = "Aww yes! 🥺 You really know us 💖";
-          } else {
-            document.getElementById('memory-result').textContent = "Oops! 😅 But I still love you!";
-          }
-          currentMemory = (currentMemory + 1) % memoryQuestions.length;
-          setTimeout(() => {
-            document.getElementById('memory-result').textContent = "";
-            loadMemoryGame();
-          }, 2000);
-        };
-        optionsDiv.appendChild(btn);
-      });
-    }
   </script>
 </body>
 </html>
