--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Happy Birthday Momina 🎂</title>
-  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
@@ -13,6 +13,7 @@
       overflow-x: hidden;
       color: #fff;
     }
+
     header {
       text-align: center;
       padding: 2rem 1rem;
@@ -21,10 +22,12 @@
       color: #ffd700;
       animation: glow 2s ease-in-out infinite alternate;
     }
+
     @keyframes glow {
       from { text-shadow: 0 0 10px #fff; }
       to { text-shadow: 0 0 30px #ff1493; }
     }
+
     .options {
       display: flex;
       flex-direction: column;
@@ -32,6 +35,7 @@
       gap: 1rem;
       margin-top: 2rem;
     }
+
     .options button {
       background: #fff;
       color: #ff1493;
@@ -40,50 +44,63 @@
       font-size: 1.2rem;
       border-radius: 30px;
       cursor: pointer;
-      transition: transform 0.3s;
+      transition: transform 0.3s, box-shadow 0.3s;
     }
+
     .options button:hover {
       transform: scale(1.1);
+      box-shadow: 0 0 20px #ff69b4;
     }
+
     .content {
       padding: 2rem;
       text-align: center;
       display: none;
+      opacity: 0;
+      transition: opacity 1s ease;
     }
+
     .visible {
       display: block;
+      opacity: 1;
     }
+
     .typing {
       font-size: 1.3rem;
       margin-top: 2rem;
       white-space: pre-line;
     }
+
     .rose {
       position: fixed;
-      width: 60px;
-      height: 60px;
+      width: 40px;
+      height: 40px;
       background: url('https://i.imgur.com/yb6nQhY.png') no-repeat center center / contain;
-      animation: fall 10s linear infinite;
+      animation: fall 6s linear forwards;
       top: -60px;
       pointer-events: none;
-      z-index: 0;
+      z-index: 5;
     }
+
     @keyframes fall {
-      0% { transform: translateY(0) rotate(0deg); opacity: 1; }
+      0% { transform: translateY(0) rotate(0); opacity: 1; }
       100% { transform: translateY(100vh) rotate(360deg); opacity: 0; }
     }
+
     .gift-box {
       font-size: 3rem;
       cursor: pointer;
       margin-top: 2rem;
     }
+
     canvas {
       position: fixed;
       top: 0;
       left: 0;
       pointer-events: none;
-      z-index: 10;
+      z-index: 1;
     }
+
     form textarea {
       width: 80%;
       padding: 1rem;
@@ -92,6 +109,7 @@
       border: none;
       font-size: 1rem;
     }
+
     form input[type="submit"] {
       padding: 1rem 2rem;
       background: white;
@@ -105,22 +123,20 @@
 </head>
 <body>
   <audio id="bg-music">
-    <source src="https://www2.cs.uic.edu/~i101/SoundFiles/HappyBirthdaySong.mp3" type="audio/mp3">
+    <source src="https://www2.cs.uic.edu/~i101/SoundFiles/HappyBirthdaySong.mp3" type="audio/mp3" />
   </audio>
 
   <header>🎂 Happy Birthday, Momina! 🎉</header>
 
   <div class="options">
-    <button onclick="showSection('wish')">💌 Read Your Wish</button>
-    <button onclick="showSection('game1')">🎯 Score Game</button>
-    <button onclick="showSection('game2')">🧠 Romantic Questions</button>
-    <button onclick="showSection('gift')">🎁 Surprise Gift</button>
+    <button onclick="showSectionWithRoses('wish')">💌 Read Your Wish</button>
+    <button onclick="showSectionWithRoses('game1')">🎯 Score Game</button>
+    <button onclick="showSectionWithRoses('game2')">🧠 Romantic Questions</button>
+    <button onclick="showSectionWithRoses('gift')">🎁 Surprise Gift</button>
     <button onclick="startFireworks()">🎆 Fireworks</button>
   </div>
 
-  <div class="content" id="wish">
-    <p class="typing"></p>
-  </div>
+  <div class="content" id="wish"><p class="typing"></p></div>
 
   <div class="content" id="game1">
     <h2>🎯 Score Game</h2>
@@ -149,10 +165,9 @@
   <canvas id="fireworks"></canvas>
 
   <script>
-    const fullMessage = "Tum meri zindagi, mera sukoon, mera sab kuch ho. I can't wait to get married to you. Meri intahaayat, meri duniya, mera pyaara sa bacha. I love you so muchhhhhhhhhhhhhhhhh 💕. Seriously I can't wait to get married to you mera bachaaaa. Happy birthday meri jaaan. ALLAH tmhain hazar khushiyan dy. May you live a long and a happy life meri jaaan.";
-    const typingElem = document.querySelector(".typing");
+    const fullMessage = `Tum meri zindagi, mera sukoon, mera sab kuch ho. I can't wait to get married to you. Meri intahaayat, meri duniya, mera pyaara sa bacha. I love you so muchhhhhhhhhhhhhhhhh 💕. Seriously I can't wait to get married to you mera bachaaaa. Happy birthday meri jaaan. ALLAH tmhain hazar khushiyan dy. May you live a long and a happy life meri jaaan.`;
     let index = 0;
-    const bgMusic = document.getElementById('bg-music');
+    const typingElem = document.querySelector(".typing");
 
     function typeWish() {
       if (index < fullMessage.length) {
@@ -162,135 +177,90 @@
       }
     }
 
-    function showSection(id) {
-      document.querySelectorAll('.content').forEach(div => div.classList.remove('visible'));
-      document.getElementById(id).classList.add('visible');
-      if (id === 'wish') {
-        if (bgMusic.paused) bgMusic.play();
-        typeWish();
-      }
+    function showSectionWithRoses(id) {
+      createRoseRain();
+      setTimeout(() => {
+        document.querySelectorAll('.content').forEach(div => {
+          div.classList.remove('visible');
+          div.style.display = 'none';
+        });
+        const target = document.getElementById(id);
+        target.style.display = 'block';
+        setTimeout(() => target.classList.add('visible'), 50);
+
+        if (id === 'wish') {
+          index = 0;
+          typingElem.innerHTML = '';
+          document.getElementById('bg-music').play();
+          typeWish();
+        }
+      }, 1200);
     }
 
-    let score = 0;
     function increaseScore() {
-      score++;
-      document.getElementById('score').textContent = score;
+      const scoreElem = document.getElementById('score');
+      scoreElem.textContent = +scoreElem.textContent + 1;
     }
 
     function revealGift() {
       document.getElementById('gift-text').innerText = "🌟 Surprise! Your gift is my forever love, my loyalty, and my heart. 🎁❤️";
     }
 
-    setInterval(() => {
-      const rose = document.createElement('div');
-      rose.className = 'rose';
-      rose.style.left = Math.random() * window.innerWidth + 'px';
-      document.body.appendChild(rose);
-      setTimeout(() => rose.remove(), 10000);
-    }, 800);
+    // Rose Rain Animation
+    function createRoseRain() {
+      for (let i = 0; i < 30; i++) {
+        const rose = document.createElement('div');
+        rose.className = 'rose';
+        rose.style.left = Math.random() * window.innerWidth + 'px';
+        document.body.appendChild(rose);
+        setTimeout(() => rose.remove(), 6000);
+      }
+    }
 
-    // Realistic Fireworks
+    // Fireworks
     const canvas = document.getElementById('fireworks');
     const ctx = canvas.getContext('2d');
     canvas.width = window.innerWidth;
     canvas.height = window.innerHeight;
-
-    let fireworks = [];
-    let particles = [];
-
-    function random(min, max) {
-      return Math.random() * (max - min) + min;
-    }
-
-    class Firework {
-      constructor() {
-        this.x = random(canvas.width * 0.2, canvas.width * 0.8);
-        this.y = canvas.height;
-        this.targetY = random(canvas.height * 0.2, canvas.height * 0.5);
-        this.speed = 5;
-        this.exploded = false;
-        this.color = `hsl(${Math.random() * 360}, 100%, 60%)`;
-      }
-
-      update() {
-        this.y -= this.speed;
-        if (this.y <= this.targetY && !this.exploded) {
-          this.exploded = true;
-          for (let i = 0; i < 100; i++) {
-            particles.push(new Particle(this.x, this.y, this.color));
-          }
-        }
-      }
-
-      draw() {
-        if (!this.exploded) {
-          ctx.beginPath();
-          ctx.fillStyle = this.color;
-          ctx.arc(this.x, this.y, 3, 0, 2 * Math.PI);
-          ctx.fill();
-        }
-      }
-    }
-
-    class Particle {
-      constructor(x, y, color) {
-        this.x = x;
-        this.y = y;
-        this.radius = Math.random() * 2 + 1;
-        this.color = color;
-        this.angle = Math.random() * 2 * Math.PI;
-        this.speed = Math.random() * 5 + 2;
-        this.gravity = 0.05;
-        this.alpha = 1;
-      }
-
-      update() {
-        this.x += Math.cos(this.angle) * this.speed;
-        this.y += Math.sin(this.angle) * this.speed + this.gravity;
-        this.alpha -= 0.015;
-      }
-
-      draw() {
-        ctx.globalAlpha = this.alpha;
-        ctx.beginPath();
-        ctx.fillStyle = this.color;
-        ctx.arc(this.x, this.y, this.radius, 0, 2 * Math.PI);
-        ctx.fill();
-        ctx.globalAlpha = 1;
-      }
-    }
-
     let fireworksActive = false;
+    let particles = [];
 
     function startFireworks() {
       fireworksActive = true;
-      setInterval(() => {
-        if (fireworksActive) {
-          fireworks.push(new Firework());
-        }
-      }, 800);
     }
 
-    function animate() {
-      ctx.fillStyle = 'rgba(0, 0, 0, 0.2)';
-      ctx.fillRect(0, 0, canvas.width, canvas.height);
+    document.addEventListener('click', function(e) {
+      if (!fireworksActive) return;
+      const x = e.pageX, y = e.pageY;
+      for (let i = 0; i < 50; i++) {
+        let angle = Math.random() * 2 * Math.PI;
+        let speed = Math.random() * 5 + 2;
+        let dx = Math.cos(angle) * speed;
+        let dy = Math.sin(angle) * speed;
+        let radius = Math.random() * 3 + 2;
+        let color = `hsl(${Math.random() * 360}, 100%, 70%)`;
+        particles.push({ x, y, dx, dy, radius, color, alpha: 1 });
+      }
+    });
 
-      fireworks.forEach((fw, index) => {
-        fw.update();
-        fw.draw();
-        if (fw.exploded) fireworks.splice(index, 1);
-      });
-
-      particles.forEach((p, index) => {
-        p.update();
-        p.draw();
-        if (p.alpha <= 0) particles.splice(index, 1);
-      });
-
-      requestAnimationFrame(animate);
+    function animateFireworks() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      particles = particles.filter(p => p.alpha > 0);
+      for (let p of particles) {
+        ctx.beginPath();
+        ctx.globalAlpha = p.alpha;
+        ctx.fillStyle = p.color;
+        ctx.arc(p.x, p.y, p.radius, 0, 2 * Math.PI);
+        ctx.fill();
+        p.x += p.dx;
+        p.y += p.dy;
+        p.alpha -= 0.02;
+      }
+      ctx.globalAlpha = 1;
+      requestAnimationFrame(animateFireworks);
     }
 
-    animate();
+    animateFireworks();
   </script>
 </body>
 </html>
