--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Happy Birthday Momina 🎂</title>
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/fireworks-js@2.10.4/dist/fireworks.js"></script>
@@ -10,10 +10,22 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to bottom, #000010, #1a001a);
+      background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
+      height: 100vh;
       overflow-x: hidden;
       color: #fff;
     }
+
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: transparent url('https://i.ibb.co/tp08prn/stars.gif') repeat;
+      z-index: 0;
+      pointer-events: none;
+    }
+
     header {
       text-align: center;
       padding: 2rem 1rem;
@@ -21,18 +33,25 @@
       font-family: 'Great Vibes', cursive;
       color: #ffd700;
       animation: glow 2s ease-in-out infinite alternate;
+      z-index: 1;
+      position: relative;
     }
+
     @keyframes glow {
       from { text-shadow: 0 0 10px #fff; }
       to { text-shadow: 0 0 30px #ff1493; }
     }
+
     .options {
       display: flex;
       flex-direction: column;
       align-items: center;
       gap: 1rem;
       margin-top: 2rem;
+      z-index: 1;
+      position: relative;
     }
+
     .options button {
       background: #fff;
       color: #ff1493;
@@ -41,24 +60,36 @@
       font-size: 1.2rem;
       border-radius: 30px;
       cursor: pointer;
-      transition: transform 0.3s;
+      transition: transform 0.3s, background 0.3s;
     }
+
     .options button:hover {
       transform: scale(1.1);
+      background: #ff1493;
+      color: #fff;
     }
+
     .content {
       padding: 2rem;
       text-align: center;
       display: none;
+      opacity: 0;
+      transition: opacity 1s ease-in-out;
+      z-index: 1;
+      position: relative;
     }
+
     .visible {
       display: block;
+      opacity: 1;
     }
+
     .typing {
       font-size: 1.3rem;
       margin-top: 2rem;
       white-space: pre-line;
     }
+
     .rose {
       position: fixed;
       width: 100px;
@@ -69,15 +100,18 @@
       pointer-events: none;
       z-index: 100;
     }
+
     @keyframes fall {
       0% { transform: translateY(0) rotate(0deg); opacity: 1; }
       100% { transform: translateY(100vh) rotate(720deg); opacity: 0; }
     }
+
     .gift-box {
       font-size: 3rem;
       cursor: pointer;
       margin-top: 2rem;
     }
+
     form textarea {
       width: 80%;
       padding: 1rem;
@@ -86,6 +120,7 @@
       border: none;
       font-size: 1rem;
     }
+
     form input[type="submit"] {
       padding: 1rem 2rem;
       background: white;
@@ -95,6 +130,7 @@
       font-size: 1rem;
       cursor: pointer;
     }
+
     #fireworks-container {
       position: fixed;
       top: 0;
@@ -104,147 +140,183 @@
       pointer-events: none;
       z-index: 999;
     }
+
     #gift-img {
       margin-top: 1rem;
       width: 200px;
     }
+
+    /* Heart Sparkles */
+    .heart {
+      position: fixed;
+      width: 20px;
+      height: 20px;
+      background: url('https://i.imgur.com/1s7QbEX.png') no-repeat center/contain;
+      animation: floatUp 6s linear infinite;
+      pointer-events: none;
+      z-index: 999;
+    }
+
+    @keyframes floatUp {
+      0% {
+        transform: translateY(0) scale(0.5);
+        opacity: 1;
+      }
+      100% {
+        transform: translateY(-100vh) scale(1.2);
+        opacity: 0;
+      }
+    }
   </style>
 </head>
 <body>
-  <audio id="bg-music">
-    <source src="https://www2.cs.uic.edu/~i101/SoundFiles/HappyBirthdaySong.mp3" type="audio/mp3">
-  </audio>
 
-  <header>🎂 Happy Birthday, Momina! 🎉</header>
+<audio id="bg-music" autoplay loop>
+  <source src="https://cdn.pixabay.com/download/audio/2022/12/06/audio_196fb1da78.mp3" type="audio/mp3">
+</audio>
 
-  <div class="options">
-    <button onclick="playTransition('wish')">💌 Read Your Wish</button>
-    <button onclick="playTransition('game1')">🎯 Score Game</button>
-    <button onclick="playTransition('game2')">🧠 Romantic Questions</button>
-    <button onclick="playTransition('gift')">🏱 Surprise Gift</button>
-    <button onclick="startFireworks()">🎆 Fireworks</button>
-  </div>
+<header>🎂 Happy Birthday, Momina! 🎉</header>
 
-  <div class="content" id="wish">
-    <p class="typing"></p>
-  </div>
+<div class="options">
+  <button onclick="playTransition('wish')">💌 Read Your Wish</button>
+  <button onclick="playTransition('game1')">🎯 Score Game</button>
+  <button onclick="playTransition('game2')">🧠 Romantic Questions</button>
+  <button onclick="playTransition('gift')">🏱 Surprise Gift</button>
+  <button onclick="startFireworks()">🎆 Fireworks</button>
+</div>
 
-  <div class="content" id="game1">
-    <h2>🎯 Score Game</h2>
-    <button onclick="increaseScore()">💘 Tap to Score</button>
-    <p>Your Score: <span id="score">0</span></p>
-  </div>
+<div class="content" id="wish">
+  <p class="typing"></p>
+</div>
 
-  <div class="content" id="game2">
-    <h2>💬 Romantic Questions</h2>
-    <form action="https://formsubmit.co/YOUR_EMAIL_HERE" method="POST">
-      <textarea name="q1" placeholder="What do you love the most in me?"></textarea>
-      <textarea name="q2" placeholder="What was your first thought after seeing me?"></textarea>
-      <textarea name="q3" placeholder="Are you ready to marry me?"></textarea>
-      <textarea name="q4" placeholder="Do you actually love me?"></textarea>
-      <textarea name="q5" placeholder="Will you live with me till the end?"></textarea>
-      <input type="submit" value="Send Answers 💌">
-    </form>
-  </div>
+<div class="content" id="game1">
+  <h2>🎯 Score Game</h2>
+  <button onclick="increaseScore()">💘 Tap to Score</button>
+  <p>Your Score: <span id="score">0</span></p>
+</div>
 
-  <div class="content" id="gift">
-    <h2>🏱 Click the Gift!</h2>
-    <div class="gift-box" onclick="revealGift()">🏱</div>
-    <p id="gift-text"></p>
-    <img id="gift-img" src="https://i.imgur.com/ab3lSvm.png" alt="Red Rose Bouquet" style="display:none" />
-  </div>
+<div class="content" id="game2">
+  <h2>💬 Romantic Questions</h2>
+ <form action="https://formsubmit.co/mirzaze0786@gmail.com" method="POST">
 
-  <div id="fireworks-container"></div>
+    <textarea name="q1" placeholder="What do you love the most in me?"></textarea>
+    <textarea name="q2" placeholder="What was your first thought after seeing me?"></textarea>
+    <textarea name="q3" placeholder="Are you ready to marry me?"></textarea>
+    <textarea name="q4" placeholder="Do you actually love me?"></textarea>
+    <textarea name="q5" placeholder="Will you live with me till the end?"></textarea>
+    <input type="submit" value="Send Answers 💌">
+  </form>
+</div>
 
-  <script>
-    const fullMessage = "Tum meri zindagi, mera sukoon, mera sab kuch ho. I can't wait to get married to you. Meri intahaayat, meri duniya, mera pyaara sa bacha. I love you so muchhhhhhhhhhhhhhhhh 💕. Seriously I can't wait to get married to you mera bachaaaa. Happy birthday meri jaaan. ALLAH tmhain hazar khushiyan dy. May you live a long and a happy life meri jaaan.";
-    const typingElem = document.querySelector(".typing");
-    let index = 0;
-    function typeWish() {
-      if (index < fullMessage.length) {
-        typingElem.innerHTML += fullMessage.charAt(index);
-        index++;
-        setTimeout(typeWish, 50);
-      }
+<div class="content" id="gift">
+  <h2>🏱 Click the Gift!</h2>
+  <div class="gift-box" onclick="revealGift()">🏱</div>
+  <p id="gift-text"></p>
+  <img id="gift-img" src="https://i.imgur.com/ab3lSvm.png" alt="Red Rose Bouquet" style="display:none" />
+</div>
+
+<div id="fireworks-container"></div>
+
+<script>
+  const fullMessage = "Tum meri zindagi, mera sukoon, mera sab kuch ho. I can't wait to get married to you. Meri intahaayat, meri duniya, mera pyaara sa bacha. I love you so muchhhhhhhhhhhhhhhhh 💕. Seriously I can't wait to get married to you mera bachaaaa. Happy birthday meri jaaan. ALLAH tmhain hazar khushiyan dy. May you live a long and a happy life meri jaaan.";
+  const typingElem = document.querySelector(".typing");
+  let index = 0;
+
+  function typeWish() {
+    if (index < fullMessage.length) {
+      typingElem.innerHTML += fullMessage.charAt(index);
+      index++;
+      setTimeout(typeWish, 50);
     }
+  }
 
-    function playTransition(targetId) {
-      const audio = document.getElementById('bg-music');
-      audio.volume = 1;
-      audio.play();
+  function playTransition(targetId) {
+    const audio = document.getElementById('bg-music');
+    audio.volume = 1;
+    audio.play();
 
-      const roseInterval = setInterval(() => {
-        const rose = document.createElement('div');
-        rose.className = 'rose';
-        rose.style.left = Math.random() * window.innerWidth + 'px';
-        rose.style.animationDuration = (6 + Math.random() * 4) + 's';
-        rose.style.transform = `scale(${0.5 + Math.random()}) rotate(${Math.random() * 360}deg)`;
-        document.body.appendChild(rose);
-        setTimeout(() => rose.remove(), 10000);
-      }, 100);
+    const roseInterval = setInterval(() => {
+      const rose = document.createElement('div');
+      rose.className = 'rose';
+      rose.style.left = Math.random() * window.innerWidth + 'px';
+      rose.style.animationDuration = (6 + Math.random() * 4) + 's';
+      rose.style.transform = `scale(${0.5 + Math.random()}) rotate(${Math.random() * 360}deg)`;
+      document.body.appendChild(rose);
+      setTimeout(() => rose.remove(), 10000);
+    }, 100);
 
-      setTimeout(() => {
-        clearInterval(roseInterval);
-        showSection(targetId);
-      }, 2000);
-    }
+    document.querySelectorAll('.content').forEach(div => {
+      div.classList.remove('visible');
+    });
 
-    function showSection(id) {
-      document.querySelectorAll('.content').forEach(div => div.classList.remove('visible'));
-      document.getElementById(id).classList.add('visible');
-      if (id === 'wish') {
+    setTimeout(() => {
+      clearInterval(roseInterval);
+      const target = document.getElementById(targetId);
+      target.classList.add('visible');
+      if (targetId === 'wish') {
         index = 0;
         typingElem.innerHTML = '';
         typeWish();
       }
-    }
+    }, 2000);
+  }
 
-    let score = 0;
-    function increaseScore() {
-      score++;
-      document.getElementById('score').textContent = score;
-    }
+  let score = 0;
+  function increaseScore() {
+    score++;
+    document.getElementById('score').textContent = score;
+  }
 
-    function revealGift() {
-      document.getElementById('gift-text').innerText = "🌟 Surprise! Your gift is my forever love, my loyalty, and my heart. 🏱❤️";
-      document.getElementById('gift-img').style.display = 'block';
-    }
+  function revealGift() {
+    document.getElementById('gift-text').innerText = "🌟 Surprise! Your gift is my forever love, my loyalty, and my heart. 🏱❤️";
+    document.getElementById('gift-img').style.display = 'block';
+  }
 
-    let fireworksInstance = null;
-    function startFireworks() {
-      const container = document.getElementById('fireworks-container');
-      if (!container) return;
-      if (fireworksInstance) return;
+  let fireworksInstance = null;
+  function startFireworks() {
+    const container = document.getElementById('fireworks-container');
+    if (!container) return;
+    if (fireworksInstance) return;
 
-      fireworksInstance = new Fireworks.default(container, {
-        rocketsPoint: 50,
-        hue: { min: 0, max: 360 },
-        delay: { min: 15, max: 30 },
-        speed: 2,
-        acceleration: 1.05,
-        friction: 0.97,
-        gravity: 1.5,
-        particles: 100,
-        trace: 3,
-        explosion: 5,
-        autoresize: true,
-        brightness: { min: 50, max: 80 },
-        sound: {
-          enabled: true,
-          files: ['https://www.fesliyanstudios.com/play-mp3/387'],
-          volume: 1
-        }
-      });
+    fireworksInstance = new Fireworks.default(container, {
+      hue: { min: 0, max: 360 },
+      delay: { min: 15, max: 30 },
+      speed: 2,
+      acceleration: 1.05,
+      friction: 0.97,
+      gravity: 1.5,
+      particles: 100,
+      trace: 3,
+      explosion: 5,
+      autoresize: true,
+      brightness: { min: 50, max: 80 },
+      sound: {
+        enabled: true,
+        files: ['https://www.fesliyanstudios.com/play-mp3/387'],
+        volume: 1
+      }
+    });
 
-      fireworksInstance.start();
+    fireworksInstance.start();
 
-      setTimeout(() => {
-        if (fireworksInstance) {
-          fireworksInstance.stop();
-          fireworksInstance = null;
-        }
-      }, 10000);
-    }
-  </script>
+    setTimeout(() => {
+      if (fireworksInstance) {
+        fireworksInstance.stop();
+        fireworksInstance = null;
+      }
+    }, 10000);
+  }
+
+  // Generate heart sparkles endlessly
+  setInterval(() => {
+    const heart = document.createElement('div');
+    heart.className = 'heart';
+    heart.style.left = Math.random() * window.innerWidth + 'px';
+    heart.style.bottom = '-20px';
+    heart.style.animationDuration = (5 + Math.random() * 3) + 's';
+    document.body.appendChild(heart);
+    setTimeout(() => heart.remove(), 8000);
+  }, 500);
+</script>
 </body>
 </html>
